--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -49,6 +49,12 @@ ul.inside {
  /*  column-count: 3; */
  }
 
+.server_column {
+    width:250px;
+    display: inline-block;
+}
+
+
 .footer {
     margin: 0 auto;
     width:170px;
@@ -114,51 +120,4 @@ ul.inside {
     font-weight: bold;
     border-radius: 15px;
 }
-/*
-.inline {
-    display: inline-block;
-    margin-top:5px;
-    margin-bottom:5px;
-    padding:5px 8px;
-    border-radius: 15px;
-    background-color: white;
-}
-
-.login {
- float:right;
- margin-right:10px;
-}
-
-
-input[type=text],input[type=password] {
-background-color: lightgray;
-border: none;
-border-radius: 15px;
-padding-left:15px;
-width:100px;
-
-}
-input[type=submit] {
-    background-color: #eee;
-    border-bottom: 1px solid darkgrey;
-    color: #444;
-    cursor: pointer;
-    padding: 2px;
-    width: 80px;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-    border-radius: 15px;
-
-}
-
-input[type=submit].active, input[type=submit]:hover {
-    background-color: #ddd;
-}
-
-.login {
- float:right;
- margin-right:10px;
-}
-
 
