--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -90,9 +90,9 @@
                             {% for j in latest %}
                                 {% if j.web == n %}
                                     {% if j.status %}
-                                        <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" disabled="true" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a></li>
+                                        <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" checked onclick="update_ssidlist(this)"/><span class="{{ j.name }}">{{ j.name }}  </span></li>
                                     {% else %}
-                                        <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" disabled="true" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a><br></li>
+                                        <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled="true" onclick="update_ssidlist(this)"/><span class="{{ j.name }}">{{ j.name }}  </span><br></li>
                                     {% endif %}
                                 {% endif %}
                             {% endfor %}
