Added search field to admin

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -36,6 +36,8 @@
 <!--Header part-->
  <div class="title"><p class="pulsate">Select server...</p></div>
 
+{{ perms.ssid }}
+
 <!--Test-->
 <div class="big">
  {% if username %}
