--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -37,6 +37,7 @@
  <div class="title"><p class="pulsate">Select server...</p></div>
 
 {{ perms.ssid }}
+{{ groups.ssid }}
 
 <!--Test-->
 <div class="big">
