Added search field to admin

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -37,7 +37,7 @@
  <div class="title"><p class="pulsate">Select server...</p></div>
 
 {{ perms.ssid }}
-{{ groups.ssid }}
+{{ user.groups.all }}
 
 <!--Test-->
 <div class="big">
