changed database and index.html

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -254,7 +254,7 @@ $(document).ready(function(){
         if (!ssidlist.includes(ssid.id)) {
             $('span.'+ssid.id).css({color:'green',opacity: 0.2}).animate({opacity: 1}, 700 );
             up_new.push(ssid.id)
-            ip.push(ssid.ip)
+            //ip.push(ssid.ip)
             $('#Run').css('display','block');
             $('#time_label,#timercheckbox').css('display','inline-block');
             //web_server=ssid.
