added phone number

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -35,6 +35,7 @@
 
 <!--Header part-->
  <div class="title"><p class="pulsate">Select server...</p></div>
+<table><tr><td><a href="tel:+380503871070">Phone: 050 387 10 70</a></td></tr></table>
 
 <!--Test-->
 <div class="big">
