--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -108,8 +108,10 @@ ul.inside {
 
 .login_form {
     display:inline-block;
-    margin-top:5px;
+    margin-top:150px;
     margin-bottom:5px;
+    margin-left: auto;
+    margin-right:auto;
     padding:5px 8px;
     float:right;
     margin-right:10px;
