--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -107,13 +107,12 @@ ul.inside {
 
 
 .login_form {
-    margin-top:150px;
-    margin-bottom:5px;
+    margin-top:250px;
     margin-left: auto;
     margin-right:auto;
     padding:5px 8px;
-    float:right;
     border:1px solid black;
+    width:50px;
 }
 
 
