--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -112,7 +112,7 @@ ul.inside {
     margin-right:auto;
     padding:5px 8px;
     border:1px solid black;
-    width:50px;
+    width:100px;
 }
 
 
@@ -122,3 +122,57 @@ ul.inside {
     border-radius: 15px;
 }
 
+
+
+/* Login form*/
+#login_container {
+	width: 357px;
+	height: 383px;
+	margin: 100px auto;
+	background: url('images/login_bg.png') top left no-repeat;
+}
+
+#form_container {
+	width: 300px;
+	height: 200px;
+	margin: 0px auto;
+	padding-top: 130px;
+}
+
+.text_input:focus {
+	outline: 0;
+}
+
+.text_input {
+	color: #c1c1c3;
+	border: 0;
+	margin: 5px 35px 0 34px;
+	padding: 0px 0px 0px 10px;
+	width: 229px;
+	height: 32px;
+	background: url('images/text_input.png') top left no-repeat;
+}
+
+#login {
+	margin: 20px 108px;
+	border: 0;
+	width: 83px;
+	height: 30px;
+	background: url('images/login_btn.png') top left no-repeat;
+	cursor:pointer;
+}
+
+#login:hover {opacity:0.9;}
+
+#login:active {
+	background: url('images/login_btn_hov.png') top left no-repeat;
+}
+
+.login-text {
+	text-align:center;
+	margin:25px;
+	color:#515151;
+	font-family: 'Lobster', cursive;
+}
+
+/* Login form*/
