--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -5,7 +5,7 @@
     <title>SSID SWITCHER</title>
     <meta charset="utf-8">
     <link href="{% static 'stylesheet.css' %}" rel="stylesheet" type="text/css" >
-    <link href="{% static 'bred.css' %}" rel="stylesheet" type="text/css" >
+   <!-- <link href="{% static 'bred.css' %}" rel="stylesheet" type="text/css" > -->
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <script src="{% static 'jquery-3.1.1.min.js'%}"></script>
  <!--   <script src="{% static 'main.js'%}"></script> -->
