--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -66,7 +66,7 @@
 		<form method='POST' action="/auth/login/">
             {% csrf_token %}
 		<input type='text' onFocus="if(this.value=='Login')this.value=''" onblur="if(this.value=='')this.value='Login'" name='username' value='Login' class='text_input' />
-		<input type='text' onFocus="if(this.value=='Password')this.value=''" onblur="if(this.value=='')this.value='Password'" name='password' value='Password' class='text_input' />
+		<input type='password' onFocus="if(this.value=='Password')this.value=''" onblur="if(this.value=='')this.value='Password'" name='password' value='Password' class='text_input' />
          {% if login_error %}
          <label class="error">{{login_error}}</label>
          {% endif %}
