--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -107,12 +107,12 @@ ul.inside {
 
 
 .login_form {
-    margin-top:250px;
-    margin-left: auto;
-    margin-right:auto;
+    display:inline-block;
+    margin-top:5px;
+    margin-bottom:5px;
     padding:5px 8px;
-    border:1px solid black;
-    width:100px;
+    float:right;
+    margin-right:10px;
 }
 
 
