--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -16,8 +16,8 @@
 {% if username %}
  <div id="header">
   <div class="login_form">
-    <a href="/auth/profile" style="color: black;text-decoration: none">Профиль ({{ username }})</a>
-    <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button">Выйти</button>
+    <a href="/auth/profile" style="color: black;text-decoration: none">Profile ({{ username }})</a>
+    <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button">Logout</button>
   </div>
  </div>
 
@@ -63,6 +63,7 @@
 {% else %}
 <div id="login_container">
 	<div id="form_container">
+        <p class="login-text">SSID SWITCHER</p>
 		<form method='POST' action="/auth/login/">
             {% csrf_token %}
 		<input type='text' onFocus="if(this.value=='Login')this.value=''" onblur="if(this.value=='')this.value='Login'" name='username' value='Login' class='text_input' />
