Added new login form

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -64,7 +64,7 @@
 {% else %}
 <div id="login_container">
 	<div id="form_container">
-        <p class="login-text">Welcome to SSID App <img src="{% static 'images/wifi.png' %}"></p>
+        <p class="login-text"><img src="{% static 'images/wifi.png' %}"></p>
 		<form method='POST' action="/auth/login/">
             {% csrf_token %}
 		<input type='text' onFocus="if(this.value=='Login')this.value=''" onblur="if(this.value=='')this.value='Login'" name='username' value='Login' class='text_input' />
