--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -137,6 +137,7 @@ ul.inside {
 	height: 200px;
 	margin: 0px auto;
 	padding-top: 80px;
+    border: 1px solid black;
 }
 
 .text_input:focus {
@@ -170,8 +171,6 @@ ul.inside {
 
 .login-text {
 	text-align:center;
-	margin-left: auto;
-    margin-right: auto;
 	color:#515151;
     font-size: 18px;
 }
