--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -176,3 +176,26 @@ ul.inside {
 }
 
 /* Login form*/
+
+/*Pulsate led of wifi device*/
+.pulsate {
+    -webkit-animation: pulsate 3s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    opacity: 0.1;
+    font-size: 2em;
+    font-weight: bold;
+
+}
+@-webkit-keyframes pulsate {
+    0% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1.0;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
+
+/*Pulsate led of wifi device*/
