--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -64,7 +64,7 @@
 {% else %}
 <div id="login_container">
 	<div id="form_container">
-        <p class="login-text"><img src="{% static 'images/wifi.png' %}"><div style="position: absolute;" class="pulsate-led"><img height=16px width=16px src="{% static 'images/wifi-led.png' %}"></div></p>
+        <p class="login-text"><img src="{% static 'images/wifi.png' %}"><div style="position: absolute;right: -80px;" class="pulsate-led"><img height=16px width=16px src="{% static 'images/wifi-led.png' %}"></div></p>
 		<form method='POST' action="/auth/login/">
             {% csrf_token %}
 		<input type='text' onFocus="if(this.value=='Login')this.value=''" onblur="if(this.value=='')this.value='Login'" name='username' value='Login' class='text_input' />
