Added new login form

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -137,6 +137,7 @@ ul.inside {
 	/*height: 200px; */
 	margin: 0px auto;
 	padding-top: 80px;
+    border: 1px solid black;
 }
 
 .text_input:focus {
@@ -173,6 +174,7 @@ ul.inside {
 	color:#515151;
     font-size: 18px;
     margin-bottom: 10px;
+    border: 1px solid black;
 }
 
 /* Login form*/
