--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -135,8 +135,8 @@ ul.inside {
 #form_container {
 	width: 300px;
 	/*height: 200px; */
-	margin: 0px auto;
-	padding-top: 80px;
+	/*margin: 0px auto;
+	padding-top: 80px; */
     border: 1px solid black;
 }
 
