Added new login form

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -182,6 +182,7 @@ ul.inside {
 /*Pulsate led of wifi device*/
 .pulsate-led {
     border: 1px solid black;
+    width:20px;
     -webkit-animation: pulsate 3s ease-out;
     -webkit-animation-iteration-count: infinite;
     opacity: 0;
