--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -173,7 +173,7 @@ ul.inside {
 	color:#515151;
     font-size: 18px;
   /*  margin-bottom: 10px; */
-    border: 1px solid black;
+    border: 1px solid red;
 }
 
 /* Login form*/
