Added new login form

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -180,7 +180,7 @@ ul.inside {
 
 /*Pulsate led of wifi device*/
 .pulsate-led {
-    border: 1px solid black;
+    border: 1px solid green;
     width:20px;
     -webkit-animation: pulsate 3s ease-out;
     -webkit-animation-iteration-count: infinite;
