--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -174,6 +174,7 @@ ul.inside {
     font-size: 18px;
   /*  margin-bottom: 10px; */
     border: 1px solid red;
+    height:150px;
 }
 
 /* Login form*/
