Added new login form

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -192,9 +192,9 @@ ul.inside {
     0% {
         opacity: 0;
     }
-    50% {
+/*    50% {
         opacity: 0.5;
-    }
+    } */
     100% {
         opacity: 1;
     }
