--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -8,16 +8,16 @@
 <div>
     <ul>
 <li>Name: {{ instance.name }}<br></li>
-<li>Radius server ip: {{ instance.radius }}</li>
+<li>Radius server ip: {{ instance.web.ip }}</li>
 <li>WEB server: {{ instance.web.name }}</li>
 <li>Vendor: {{ instance.vendor.name }}</li>
 <li>Device ip: {{ instance.ip.name }}</li>
 <li>Device mac: {{ instance.ap_mac }}</li>
 {% if instance.status %}
-<li>SSID status: UP</li>
+<li>SSID status: up</li>
 <li>Remaining UP time: {{ instance.remaining_time }}</li>
 {% else %}
-<li>SSID status: DOWN</li>
+<li>SSID status: down</li>
 {% endif %}
 </ul>
 <a href="/">To Main</a>
