Changed detail.html page

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -9,7 +9,7 @@
     <ul>
 <li>Name: {{ instance.name }}<br></li>
 <li>Radius server ip: {{ instance.web.ip }}</li>
-<li>WEB server: http://{{ instance.web.name }}</li>
+<li>WEB server: <a href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
 <li>Vendor: {{ instance.vendor.name }}</li>
 <li>Device ip: {{ instance.ip.name }}</li>
 <li>Device mac: {{ instance.ap_mac }}</li>
