--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'index.html' %}
+
+{% block content %}
 <div>
-    <ul>
+<ul>
 <li>Name: {{ instance.name }}<br></li>
 <li>Radius server ip: {{ instance.web.ip }}</li>
-<li>WEB server: <a href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
+<li>WEB server: <a target="_blank" href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
 <li>Vendor: {{ instance.vendor.name }}</li>
 <li>Device ip: {{ instance.ip.name }}</li>
 <li>Device mac: {{ instance.ap_mac }}</li>
@@ -40,5 +36,4 @@ location.reload();
 },1000);
 
 </script>
-</body>
-</html>
+{% endblock %}
