Changed detail.html page

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<div>
-<ul>
+<div class="ssid-detail-container">
+<ul class="ssid-detail-list">
 <li>Name: {{ instance.name }}<br></li>
 <li>Radius server ip: {{ instance.web.ip }}</li>
 <li>WEB server: <a target="_blank" href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
