--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -195,7 +195,9 @@ ul.inside {
 /*SSID detail*/
 .ssid-detail-container {
     border:1px solid black;
-    width:150px;
+    width:200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .ssid-detail-list {
