--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="ssid-detail-container">
+<img width="256px" height="256px" src="{% static 'images/wifidevice.png' %}">
 <ul class="ssid-detail-list">
-<li style="margin-left:0;"><img width="256px" height="256px" src="{% static 'images/wifidevice.png' %}"></li>
 <li>Name: {{ instance.name }}<br></li>
 <li>Radius server ip: {{ instance.web.ip }}</li>
 <li>WEB server: <a target="_blank" href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
