--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -5,11 +5,11 @@
 <div class="ssid-detail-container">
 <img width="256px" height="256px" src="{% static 'images/wifidevice.png' %}">
 <ul class="ssid-detail-list">
-<li><span style="font-weight: bold">Name: </span>{{ instance.name }}<br></li>
-<li><span style="font-weight: bold">Radius server ip: </span>{{ instance.web.ip }}</li>
+<li><span style="font-weight: bold">Name:       </span>{{ instance.name }}<br></li>
+<li><span style="font-weight: bold">Radius ip:  </span>{{ instance.web.ip }}</li>
 <li><span style="font-weight: bold">WEB server: </span><a target="_blank" href="http://{{ instance.web.name }}">{{ instance.web.name }}</a></li>
-<li><span style="font-weight: bold">Vendor: </span>{{ instance.vendor.name }}</li>
-<li><span style="font-weight: bold">Device ip: </span>{{ instance.ip.name }}</li>
+<li><span style="font-weight: bold">Vendor:     </span>{{ instance.vendor.name }}</li>
+<li><span style="font-weight: bold">Device ip:  </span>{{ instance.ip.name }}</li>
 <li><span style="font-weight: bold">Device mac: </span>{{ instance.ap_mac }}</li>
 {% if instance.status %}
 <li><span style="font-weight: bold">SSID status: </span>up</li>
