--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -197,6 +197,7 @@ ul.inside {
     width:400px;
     margin-left: auto;
     margin-right: auto;
+    border:1px solid black;
 }
 
 .ssid-detail-list {
