Changed detail.html page

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -17,7 +17,7 @@
 {% else %}
 <li><span style="font-weight: bold">SSID status: </span>down</li>
 {% endif %}
-<a href="/">To Main</a>
+<a style="margin-top:5px;" href="/">To Main</a>
 </ul>
 </div>
 
