Changed detail.html page

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -18,7 +18,7 @@
 <li><span style="font-weight: bold">SSID status: </span>down</li>
 {% endif %}
 </ul>
-<a href="/">To Main</a>
+<input class="link-to-main" type="button" onclick="location.href='/';"/>
 </div>
 
 
