Changed detail.html page

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -13,7 +13,7 @@
 <li><span style="font-weight: bold">Device mac: </span>{{ instance.ap_mac }}</li>
 {% if instance.status %}
 <li><span style="font-weight: bold">SSID status: </span>up</li>
-<li><span style="font-weight: bold">Remaining UP time: <span id="r"></span></span></li>
+<li><span style="font-weight: bold">Remaining UP time: </span><span id="r"></span></li>
 {% else %}
 <li><span style="font-weight: bold">SSID status: </span>down</li>
 {% endif %}
