--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -230,7 +230,7 @@ ul.inside {
 
 
 /*Run button*/
-#run {
+#Run {
     display: none;
     border: 0;
 	width: 83px;
@@ -240,9 +240,9 @@ ul.inside {
     margin-left:auto;
     margin-right:auto;
 }
-#login:hover {opacity:0.9;}
+#Run:hover {opacity:0.9;}
 
-#login:active {
+#Run:active {
 	background: url('images/run_hov_btn.png') top left no-repeat;
 }
 
