--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -252,7 +252,7 @@ ul.inside {
     border: 0;
 	width: 100px;
 	height: 100px;
-	background: url('images/start-button.png') no-repeat;
+	background: url('images/start-button.png');
 	cursor:pointer;
     margin-left:auto;
     margin-right:auto;
@@ -260,7 +260,7 @@ ul.inside {
 #Run:hover {opacity:0.9;}
 
 #Run:active {
-	background: url('images/start-button-hov.png') no-repeat;
+	background: url('images/start-button-hov.png');
 }
 
 /*Run button*/
