--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -18,7 +18,7 @@
  <div id="header">
   <div class="login_form">
     <a href="/auth/profile" style="color: black;text-decoration: none">Profile ({{ username }})</a>
-    <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button">Logout</button>
+    <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"></button>
   </div>
  </div>
 {% block content %}
