--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -252,7 +252,8 @@ ul.inside {
     border: 0;
 	width: 100px;
 	height: 100px;
-	background: url('images/start-button.png');
+	background-image: url('images/start-button.png');
+    background-position: center;
 	cursor:pointer;
     margin-left:auto;
     margin-right:auto;
