--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -67,7 +67,7 @@
 <label style="margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px;" id="time_label" for="timercheckbox">Timer (in minutes):</label>
 <input style="width:120px;margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px;" type="text" id="timer" placeholder="default 30 minutes" name="timer" maxlength="3" required>
 <!--<input style="margin-left:auto;margin-right:auto;width:100px;color:red;font-size:18px;font-weight:bold;display:none;border-radius: 30px;text-align: center;" type="button" id="Run" onClick="run()" value="Run"/<>-->
-<input type="button" id="Run" onClick="run()" ><img height="100px" width="100px" src="{% static 'images/run_btn.png' %}"></input>
+<input type="button" id="Run" onClick="run()" ><img height="100px" width="100px" src="{% static 'images/start-button.png' %}"></input>
     {% csrf_token %}
 
 <img id="loading" src="{% static 'InternetSlowdown_Day.gif' %}" style="width:60px;height:60px;display: none;">
