--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -252,8 +252,9 @@ ul.inside {
     border: 0;
 	width: 100px;
 	height: 100px;
-	/*background-image: url('images/start-button.png');
-    background-position: center; */
+	background-image: url('images/start-button.png');
+    background-position: center;
+    background-size: 100% 100%;
 	cursor:pointer;
     margin-left:auto;
     margin-right:auto;
