--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -17,7 +17,7 @@
 {% if username %}
  <div id="header">
   <div class="login_form">
-    <a href="/auth/profile" style="color: black;text-decoration: none">Profile ({{ username }})</a>
+    <a href="/auth/profile" style="color: black;text-decoration: none;padding-bottom: 3px;">Profile ({{ username }})</a>
     <button class="logout_btn" onclick="location.href='/auth/logout/'" type="button"/>
   </div>
  </div>
