Changed detail.html page

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -133,6 +133,7 @@ ul.inside {
     background-position: center;
     background-size: 100% 100%;
 	cursor:pointer;
+    padding-bottom: 3px;
 }
 .logout_btn:hover {
     background: url('images/logout_btn_hov.png') top left no-repeat;
