--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -61,6 +61,45 @@
      {% endfor %}
 
 <br>
+    <div class="big">
+
+     {% for i,k in vendors_enum %}
+          <div class="server_column">
+              {% for n in k %}
+                  <div class="panel">
+                      {% if n in vendors_with_up_ssids %}
+                      <button class="accordion act">{{ n }}</button>
+                      {% else %}
+                      <button class="accordion pasv">{{ n }}</button>
+                      {% endif %}
+                      <ul class="inside">
+                            <li style="margin-bottom: 5px;"><a target="_blank" style="color:red;font-size: 14px;text-decoration: underline;" href="http://{{ n }}">http://{{ n }}</a></li>
+                            <li><input type="checkbox" onclick="SelectAll(this)"/>Select all</li>
+                            {% for j in all_group_ssids %}
+                                {% if j.vendor.name == n %}
+                                    {% if j.name in ssids_busy %}
+                                        {% if j.status %}
+                                            <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:red" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }} - Busy </span></a></li>
+                                        {% else %}
+                                            <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}" disabled onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:red" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }} - Busy </span></a><br></li>
+                                        {% endif %}
+                                    {% else %}
+                                        {% if j.status %}
+                                            <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}"  checked onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}</span></a></li>
+                                        {% else %}
+                                        <li><input type="checkbox" id="{{ j.name }}" name='ssid' value="{{ j.name }}"  onclick="update_ssidlist(this)"/><a style="text-decoration: none;color:black" href="/ssid/{{ j.name }}"><span class="{{ j.name }}">{{ j.name }}  </span></a><br></li>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
+                     </ul>
+               </div>
+              {% endfor %}
+          </div>
+     {% endfor %}
+
+<br>
+
 <!--Footer part -->
 <div class="footer">
 <input type="checkbox" name="Timer" style= "margin-left:auto;margin-right:auto;display: none;text-align: center;margin-bottom:5px; " id="timercheckbox" onclick="update_timer(this)">
