Added sort by vendor

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -61,6 +61,7 @@
      {% endfor %}
 
 <br>
+    <div class="title"><p class="pulsate">Select server...</p></div>
     <div class="big">
 
      {% for i,k in vendors_enum %}
