--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -61,6 +61,7 @@
      {% endfor %}
 
 <br>
+
     <div class="title"><p class="pulsate">Select server...</p></div>
     <div class="big">
 
@@ -116,7 +117,8 @@
 <div id="errors" style="display: none;color: red;font-size: 18px"></div>
 
 </div>
-
+</div>
+</div>
 
 <script language="JavaScript">
 
